Fix issue with upgrade unit on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -350,6 +350,24 @@ img.upgraded-tile {
     background: linear-gradient(180deg, #927f61 0%, #ffd48e 48.96%, #927f61 100%);
     position: relative;
   }
+
+  button.unit-action-button {
+    width: 100%;
+    margin-top: 15px;
+    border: 1px solid #928061;
+    color: #ccbf91;
+    font-size: 16px;
+    text-transform: none;
+  }
+
+  img.unit-icon {
+    width: 24px;
+    padding: 0 5px;
+  }
+
+  strong {
+    font-size: 1.5rem;
+  }
 }
 
 .center-image {
@@ -357,14 +375,6 @@ img.upgraded-tile {
   margin: 0 10px;
 }
 
-.unit-info-window button.unit-action-button {
-  width: 100%;
-  margin-top: 15px;
-  border: 1px solid #928061;
-  color: #ccbf91;
-  font-size: 16px;
-  text-transform: none;
-}
 
 .unit-stats {
   display: flex;
@@ -372,15 +382,6 @@ img.upgraded-tile {
   justify-content: center;
   font-size: 16px;
   padding: 5px;
-}
-
-.unit-info-window img.unit-icon {
-  width: 24px;
-  padding: 0 5px;
-}
-
-.unit-info-window strong {
-  font-size: 1.5rem;
 }
 
 .in-range::after {
@@ -837,24 +838,25 @@ div.confirmation-modal {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+
+    img.avatar {
+      max-width: 32px;
+    }
+
+    img.unit-icon {
+      width: 16px;
+    }
+
+    button.unit-action-button {
+      width: auto;
+      margin: 0 10px;
+      font-size: 0.8rem;
+    }
   }
 
-  .unit-info-window img.avatar {
-    max-width: 32px;
-  }
 
   .unit-stats,
   .unit-info-window strong {
-    font-size: 0.8rem;
-  }
-
-  .unit-info-window img.unit-icon {
-    width: 16px;
-  }
-
-  .unit-info-window button.unit-action-button {
-    width: auto;
-    margin: 0 10px;
     font-size: 0.8rem;
   }
 }
